k8s/resources/common/loadflow-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadflow-server
  labels:
    name: loadflow-server
    version: "1"
    app.kubernetes.io/component: gridsuite-springboot
    gridsuite.org/springboot-with-rabbitmq: "true"
  annotations:
    gridsuite.org/size: springboot-xxl-forking
spec:
  selector:
    matchLabels:
      name: loadflow-server
  template:
    metadata:
      labels:
        name: loadflow-server
    spec:
      containers:
      - name: main
        image: docker.io/gridsuite/loadflow-server:latest
        volumeMounts:
        - mountPath: /config/specific
          name: loadflow-server-configmap-specific-volume
        - mountPath: /home/powsybl/.itools
          name: loadflow-server-itools-configmap-volume
      volumes:
        - name: loadflow-server-configmap-specific-volume
          configMap:
            name: loadflow-server-configmap-specific
        - name: loadflow-server-itools-configmap-volume
          configMap:
            name: loadflow-server-itools-configmap
