k8s/resources/common/network-conversion-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-conversion-server
  labels:
    name: network-conversion-server
    version: "1"
    app.kubernetes.io/component: gridsuite-springboot
    gridsuite.org/springboot-with-elasticsearch: "true"
    gridsuite.org/springboot-with-rabbitmq: "true"
  annotations:
    gridsuite.org/size: springboot-xxl
spec:
  selector:
    matchLabels:
      name: network-conversion-server
  template:
    metadata:
      labels:
        name: network-conversion-server
    spec:
      containers:
      - name: main
        image: docker.io/powsybl/network-conversion-server:latest
        volumeMounts:
        - mountPath: /config/specific
          name: network-conversion-server-configmap-specific-volume
        - mountPath: /home/powsybl/.itools/config.yml
          name: network-conversion-server-itools-configmap-volume
          subPath: config.yml
      volumes:
        - name: network-conversion-server-configmap-specific-volume
          configMap:
            name: network-conversion-server-configmap-specific
        - name: network-conversion-server-itools-configmap-volume
          configMap:
            name: network-conversion-server-itools-configmap
