k8s/resources/common/root-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: root-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /gridexplore
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes off;
      client_header_buffer_size 64k;
      large_client_header_buffers 4 64k;
spec:
  rules:
  - http:
      paths:
      - path: /gridexplore
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
